# giz

./: .gitignore  README.org  flake.nix  pyproject.toml
giz/: __main__.py  core.py
tests/: test_giz.py
